# CSDL

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  build.sh  clean_build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml
include/: Ball.h  BallHelper.h  CircleObject.h  CircleObject.hpp  ClassLogger.hpp  CollisionManager.hpp  Engine.h  Game.hpp  GameHelper.hpp  GameObject.h  GameObject.hpp  GameObjectHelper.h  IRenderer.hpp  Logger.hpp  MathHelper.h  ObjectHelper.hpp  RectObject.h  RectObject.hpp  Render.h  SDLHelper.hpp  SDLSound.hpp  TestClass.hpp  main.h
scripts/: build.sh  clean_build.sh
src/: BallHelper.c  CircleObject.c  CircleObject.cpp  CollisionManager.cpp  Engine.c  Game.cpp  GameObject.c  GameObject.cpp  GameObjectHelper.c  Logger.cpp  MathHelper.c  RectObject.c  RectObject.cpp  Render.c  SDLHelper.cpp  SDLSound.cpp  TestClass.cpp  main.c  main.cpp
